@@ -29,6 +29,7 @@
 - Fix: [#20429] Error window tooltip not closing after 8 seconds.
 - Fix: [#20456] Downward large half loops on flying coasters (fly-to-lie) are now correctly named.
 - Fix: [#20484] Console caret not properly updated when using command history.
+- Fix: [#20543] Crash using show segments height from debug paint options.
 
 0.4.5 (2023-05-08)
 ------------------------------------------------------------------------
